# appack

./: .gitattributes  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  appack.sublime-project  justfile  vcpkg.json
.github/: dependabot.yml
.github/workflows/: buid.yml  build.yml
assets/: somefolder2
src/: CMakeLists.txt  cli.cc  compressor.cc  compressor.h  database.cc  database.h  file.cc  file.h  file_mapping.cc  file_mapping.h  hasher.cc  hasher.h  macros.h  mapping.cc  mapping.h  mask.h  package.cc  package.h  test_fixture.cc  test_fixture.h  unique_object.cc  unique_object.h  unittests.cc
